--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
-<!doctype html>
-
-<html lang="es">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
+  <title>Spatialdb</title>
+	<meta charset="utf-8" />
 
-  <title>Base de datos espaciales y sistemas de informaci&oacute;n geogr&aacute;fica</title>
-  <meta name="description" content="P&aacute;gina de SDB&GIS">
-  <meta name="author" content="Alemedve">
-
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 </head>
-
 <body>
-	<h1>Bienvenidos... Hello world</h1>
+	<div id="map"></div>
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+
+	<script>
+		var map = L.map('map').setView([-34.573095, -58.477737], 17);
+		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q', {
+			maxZoom: 18,
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+			id: 'alemedve.ciepshx80002gvxkmm6c05zjl',
+      accesToken: 'pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q'
+		}).addTo(map);
+		L.marker([-34.573095, -58.477737]).addTo(map)
+			.bindPopup("<b>Starting point</b>").openPopup();
+		var popup = L.popup();
+    var polygon = L.polygon([
+    [-34.574915, -58.478714],
+    [-34.573510, -58.480709],
+    [-34.572238, -58.478531],
+    [-34.574023, -58.476976]
+    ], {
+      color: 'red',
+      fillColor: '#f03',
+      fillOpacity: 0.5
+    }).addTo(map);
+	</script>
+<style>
+#map {
+  width: 400px;
+  height: 400px;
+}
+</style>
 </body>
 </html>
