--- a/spotters.html
+++ b/spotters.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spatialdb</title>
+  <title>Spatialdb - Spotters Map</title>
 	<meta charset="utf-8" />
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 </head>
 <body>
-  <a href="spotters.html"> Ir al mapa de spotters </a>
-	<div id="map" style="height: 500px; width: 500px;"></div>
+	<div id="map" style="height:600px"></div>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-
-	<script>
-		var map = L.map('map').setView([-34.573095, -58.477737], 17);
+  <script src="papaparse.js"></script>
+  <script type="text/javascript">
+		var map = L.map('map').setView([-20.961, -46.406], 3);
 		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q', {
 			maxZoom: 18,
 			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
 				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
 				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'alemedve.ciepshx80002gvxkmm6c05zjl',
+			id: 'alemedve.nlc9d0ic',
       accesToken: 'pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q'
 		}).addTo(map);
-		L.marker([-34.573095, -58.477737]).addTo(map)
-			.bindPopup("<b>Starting point</b>").openPopup();
-		//var popup = L.popup();
-    var polygon = L.polygon([
-    [-34.571747, -58.477562],
-    [-34.573473, -58.476031],
-    [-34.574542, -58.477884],
-    [-34.573025, -58.479858]
-    ], {
-      color: 'red',
-      fillColor: '#f03',
-      fillOpacity: 0.2
-    }).addTo(map);
-	</script>
+    var pointIcon = L.icon({
+      iconUrl: 'point.png',
+      iconSize: [10, 10]
+    })
+
+    var results = Papa.parse("https://raw.githubusercontent.com/jpatokal/openflights/master/data/airports.dat", {
+      download: true,
+      complete: function(results) {
+        console.log(results);
+        //i < results.data.length
+        for (i=0; i<400; i++) {
+          L.marker([results.data[i][6], results.data[i][7]], {icon: pointIcon}).addTo(map);
+        }
+      }
+    });
+  </script>
+
 <style>
 </style>
 </body>
