--- a/index.html
+++ b/index.html
@@ -4,38 +4,27 @@
   <title>Spatialdb</title>
 	<meta charset="utf-8" />
 
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+  <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css">
+
+
 </head>
 <body>
-  <a href="spotters.html"> Ir al mapa de spotters </a>
-	<div id="map" style="height: 500px; width: 500px;"></div>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-
-	<script>
-		var map = L.map('map').setView([-34.573095, -58.477737], 17);
-		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'alemedve.ciepshx80002gvxkmm6c05zjl',
-      accesToken: 'pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q'
-		}).addTo(map);
-		L.marker([-34.573095, -58.477737]).addTo(map)
-			.bindPopup("<b>Starting point</b>").openPopup();
-		//var popup = L.popup();
-    var polygon = L.polygon([
-    [-34.571747, -58.477562],
-    [-34.573473, -58.476031],
-    [-34.574542, -58.477884],
-    [-34.573025, -58.479858]
-    ], {
-      color: 'red',
-      fillColor: '#f03',
-      fillOpacity: 0.2
-    }).addTo(map);
-	</script>
-<style>
-</style>
-</body>
+  <div class="navbar-spacer"></div>
+  <nav class="navbar">
+    <div class="container">
+      <ul class="navbar-list">
+        <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="#">Location history</a></li>
+      </ul>
+    </div>
+  </nav>
+  <a href="spotters.html">Ir al mapa de spotters </a>
+  <br>
+  <a href="myneighborhood.html">Ir a mapeando mi barrio </a>
+	</body>
 </html>
