Update style. Add information to index.

--- a/myneighborhood.html
+++ b/myneighborhood.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
   </nav>
-	<div id="map" style="height: 500px; width: 500px;"></div>
+	<div id="map" style="height: 500px;"></div>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 
 	<script>
