--- a/index.html
+++ b/index.html
@@ -23,8 +23,27 @@
       </ul>
     </div>
   </nav>
-  <a href="spotters.html">Ir al mapa de spotters </a>
-  <br>
-  <a href="myneighborhood.html">Ir a mapeando mi barrio </a>
+  <div class="content">
+    <h1>Course on Spatial DB and Geographic Information Systems</h1>
+
+    <h3> Mapping my neighborhood </h3>
+    <p>The idea of this work is to choose a base coordinate point near home and register all the relevant places in a 2x2 blocks area around the point.
+    First implementation just has the point chosen and the area colored using <a href="http://leafletjs.com/">Leaflet JS</a> and <a href="https://www.mapbox.com/">Mapbox</a>.
+    </p>
+    <p><a href="myneighborhood.html">Go to "mapeando mi barrio" </a></p>
+
+    <h3> Location history </h3>
+    <p>In this work we make a heatmap based on a Google Location History file.
+    </p>
+    <p><a href="#">Go to location history</a></p>
+
+    <h3>Final project: Spotters Map</h3>
+    <p>This is a map of airplane pictures around airports from Flickr. Done in collaboration with @mariadelapuerta.
+    Airport locations are retrieved from <a href="http://openflights.org/data.html">OpenFlights</a>.
+    This data is parsed with <a href="http://papaparse.com/">Papaparse</a>.
+    Map is done with <a href="http://leafletjs.com/">Leaflet JS</a> and <a href="https://www.mapbox.com/">Mapbox</a>.
+    </p>
+    <p><a href="spotters.html">Go to spotters map</a></p>
+  </div>
 	</body>
 </html>
