Add link to location page.

--- a/myneighborhood.html
+++ b/myneighborhood.html
@@ -19,7 +19,7 @@
         <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
         <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
         <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
-        <li class="navbar-item"><a class="navbar-link" href="#">Location history</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="location.html">Location history</a></li>
       </ul>
     </div>
   </nav>
