--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
         <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
         <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
-        <li class="navbar-item"><a class="navbar-link" href="#">Location history</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="location.html">Location history</a></li>
       </ul>
     </div>
   </nav>
@@ -35,7 +35,7 @@
     <h3> Location history </h3>
     <p>In this work we make a heatmap based on a Google Location History file.
     </p>
-    <p><a href="#">Go to location history</a></p>
+    <p><a href="location.html">Go to location history</a></p>
 
     <h3>Final project: Spotters Map</h3>
     <p>This is a map of airplane pictures around airports from Flickr. Done in collaboration with @mariadelapuerta.
