--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar">
     <div class="container">
       <ul class="navbar-list">
-        <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
+        <li class="navbar-item"><a class="navbar-link navbar-chosen" href="index.html">Inicio</a></li>
         <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
         <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
         <li class="navbar-item"><a class="navbar-link" href="location.html">Location history</a></li>
