--- a/location.html
+++ b/location.html
@@ -19,7 +19,7 @@
         <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
         <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
         <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
-        <li class="navbar-item"><a class="navbar-link" href="location.html">Location history</a></li>
+        <li class="navbar-item"><a class="navbar-link navbar-chosen" href="location.html">Location history</a></li>
       </ul>
     </div>
     <iframe width="100%" height="600" frameborder="0" src="https://alemedve.cartodb.com/viz/efe2bdd8-735f-11e5-a224-0e3a376473ab/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
