--- a/location.html
+++ b/location.html
@@ -16,9 +16,9 @@
   <nav class="navbar">
     <div class="container">
       <ul class="navbar-list">
-        <li class="navbar-item"><a class="navbar-link" href="index.html">Inicio</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
         <li class="navbar-item"><a class="navbar-link" href="spotters.html">Spotters Map</a></li>
-        <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapeando mi barrio</a></li>
+        <li class="navbar-item"><a class="navbar-link" href="myneighborhood.html">Mapping my neighborhood</a></li>
         <li class="navbar-item"><a class="navbar-link navbar-chosen" href="location.html">Location history</a></li>
       </ul>
     </div>
