Update description in index

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <h3> Mapping my neighborhood </h3>
     <p>The idea of this work is to choose a base coordinate point near home and register all the relevant places in a 2x2 blocks area around the point.
-    First implementation just has the point chosen and the area colored using <a href="http://leafletjs.com/">Leaflet JS</a> and <a href="https://www.mapbox.com/">Mapbox</a>.
+    Implemented in <a href="https://www.mapbox.com/">Mapbox</a>.
     </p>
-    <p><a href="myneighborhood.html">Go to the map </a></p>
+    <p><a href="myneighborhood.html">Go to the map</a></p>
 
     <h3> Location history </h3>
     <p>In this work we make a heatmap based on a Google Location History file.
