--- a/myneighborhood.html
+++ b/myneighborhood.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
 
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
+
 </head>
 <body>
   <div class="navbar-spacer"></div>
@@ -23,33 +23,7 @@
       </ul>
     </div>
   </nav>
-	<div id="map" style="height: 600px;"></div>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-
-	<script>
-		var map = L.map('map').setView([-34.573095, -58.477737], 17);
-		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-			id: 'alemedve.ciepshx80002gvxkmm6c05zjl',
-      accesToken: 'pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q'
-		}).addTo(map);
-		L.marker([-34.573095, -58.477737]).addTo(map)
-			.bindPopup("<b>Starting point</b>").openPopup();
-		//var popup = L.popup();
-    var polygon = L.polygon([
-    [-34.571747, -58.477562],
-    [-34.573473, -58.476031],
-    [-34.574542, -58.477884],
-    [-34.573025, -58.479858]
-    ], {
-      color: 'red',
-      fillColor: '#f03',
-      fillOpacity: 0.2
-    }).addTo(map);
-	</script>
+	<iframe width='100%' height='600px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/alemedve.o19lklm5/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYWxlbWVkdmUiLCJhIjoiY2llcHNoeHByMDAxbndqa21zdjdwYmJkciJ9.Ch1gM-PFeR7YhhKpqV4I7Q'></iframe>
 <style>
 </style>
 </body>
