Update spotters map with different markers and layers

--- a/spotters.html
+++ b/spotters.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/MarkerCluster.css">
+  <link rel="stylesheet" href="css/MarkerCluster.Default.css">
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 </head>
@@ -24,12 +26,14 @@
     </div>
   </nav>
 	<div id="map" style="height:600px"></div>
-  <div id="photofeed"> <div id="closefeed"><a id="photofeedclose" href="#">X</a></div>
+  <div id="photofeed" style="overflow:scroll;"> <div id="closefeed"><a id="photofeedclose" href="#">X</a></div>
   <div id="photos"></div>
   </div>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
   <script src="papaparse.js"></script>
   <script src="spotters.js"></script>
+  <script src="js/leaflet.markercluster-src.js"></script>
+  <script src="js/leaflet.markercluster.js"></script>
 
 <style>
 </style>
